--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CV - Brenda Grao</title>
+  <title>Ing. Brenda Grao</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Brenda Grao</span>
+      <span class="d-block d-lg-none">Ing. Brenda Grao</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -96,7 +96,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Big Data Analyst</h3>
-            <div class="subheading mb-3">Buffa Sistemas @ Telefonica</div>
+            <div class="subheading mb-3">Buffa Sistemas @ Telefónica</div>
             <p>Responsible for technically designing and building Extract Transform and Load (ETL) processes and Analytical Base Tables.
 Using big data tools like Hadoop ecosystem, Sqoop, Teradata (Datawarehouse) among others.
         <div class="subheading mb-3">Main responsibilities</div>
